Fix: flex gap not working in mobile browser

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -228,7 +228,8 @@ footer {
   }
 
   .socials {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
     justify-content: center;
     align-items: center;
     gap: 3.5rem;
